swipe items fixed on mobile

--- a/src/styles/main_mobile.css
+++ b/src/styles/main_mobile.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 640px ) {
   /* Блок видео */
   .video-cont {
       height: 150px;
@@ -22,6 +22,7 @@
   }
   
   .wordCarousel p{
+      transform: translate3d(0,0,0);  
       mix-blend-mode:color-dodge;
       color: lightsalmon;     
   }
@@ -29,6 +30,7 @@
   .swipe-item{
       margin-left: -15%;
   }
+
 
   /* Слайдер */
   .title-cont span {
